[gd_scene load_steps=15 format=2]

[ext_resource path="res://Stats.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/InimigosTestes/Fantasma.png" type="Texture" id=2]
[ext_resource path="res://Hurtboxes + Hitboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Detectar/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/InimigosTestes/InimigoDePerto.gd" type="Script" id=5]
[ext_resource path="res://Hurtboxes + Hitboxes/Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 37 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 37 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 37 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 37 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Andar",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.13405
height = 4.21123

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.06139
height = 11.8121

[sub_resource type="CapsuleShape2D" id=8]
radius = 6.28693
height = 6.50162

[node name="InimigoDePerto" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = SubResource( 5 )
animation = "Andar"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.393726, -7.1658 )
shape = SubResource( 8 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )

[node name="Stats" parent="." instance=ExtResource( 1 )]
max_health = 2
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
